<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RadioGroup
        android:id="@+id/rgTopLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbStiki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stiki_text" />

        <RadioButton
            android:id="@+id/rbAlunAlun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alun_alun_text" />

        <RadioButton
            android:id="@+id/rbMuseumBrawijaya"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/museum_brawijaya_text" />

        <RadioButton
            android:id="@+id/rbMatos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/matos_text" />

        <RadioButton
            android:id="@+id/rbMog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mog_text" />
    </RadioGroup>

    <include layout="@layout/activity_maps" />

</LinearLayout>
